# YSMath

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
inc/: ysGeometry.hpp  ysLine.hpp  ysMathUtil.hpp  ysMatrix.hpp  ysPlane.hpp  ysQuaternion.hpp  ysVector.hpp
src/: baseMatrix.cpp  matrix.cpp  ysGeometry.cpp  ysLine.h  ysMathUtil.h  ysMatrix.cpp  ysPlane.h  ysQuaternion.cpp  ysVector.cpp  ysVector.h
test/: CMakeLists.txt  main.cpp
